2001-02-28  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* check_mount_style.m4, check_mount_trap.m4,
	check_network_transport_type.m4, check_nfs_fh_dref.m4,
	check_nfs_prot_headers.m4, check_nfs_sa_dref.m4,
	check_nfs_socket_connection.m4, os_cflags.m4,
	type_yp_order_outorder.m4: small fixes to Ion's cleanup, and more
	cleanup (use [[0-1]] instead of M4 changequote commands).

	* Makefile.am: removed unused conf/trap/trap_hpux11.h

2001-02-27  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* aux/macros/check_network_transport_type.m4,
	aux/macros/check_mount_style.m4,
	aux/macros/check_mount_trap.m4,
	aux/macros/check_network_transport_type.m4,
	aux/macros/check_nfs_fh_dref.m4,
	aux/macros/check_nfs_prot_headers.m4,
	aux/macros/check_nfs_sa_dref.m4,
	aux/macros/check_nfs_socket_connection.m4,
	aux/macros/os_cflags.m4,
	aux/macros/type_auth_create_gidlist.m4,
	aux/macros/type_recvfrom_fromlen.m4,
	aux/macros/type_yp_order_outorder.m4:
	Reworked the scripts, so that a new _unknown_ version of a known OS
	will use the option for the newest _known_ version of that OS. For
	example, when freebsd6 comes out, it will use the stuff for
	freebsd5, not the stuff for freebsd2. This makes configure more
	likely to succeed on new systems/versions.

	* Makefile.am (EXTRA_DIST_AUX): added check_autofs_style.m4 (grr)

2001-02-24  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* Makefile.am (install-snapshot): use a different symlink target
	for the experimental snapshots.

2001-02-23  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* Makefile.am (EXTRA_DIST_CONF): include nfs_prot_darwin.h in
	distributions.

2001-02-22  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* released snapshot am-utils-6.1a3

	* amd/Makefile.am (EXTRA_amd_SOURCES): don't forget to distribute
	get_args.c

2001-02-21  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* libamu/mtab.c: added the functions hasmnteq and haseq to
	ease checks for non-numeric values in opt=value strings.