@@ -7,7 +7,7 @@ ac_cv_yp_order_outorder,
 [
 # select the correct type
 case "${host_os}" in
-	aix3* | aix4.[[0-2]]* | sunos[[34]]* | solaris1* )
+	aix[[1-3]]* | aix4.[[0-2]]* | sunos[[34]]* | solaris1* )
 		ac_cv_yp_order_outorder=int ;;
 	solaris* | svr4* | sysv4* | sunos* | hpux* | aix* )
 		ac_cv_yp_order_outorder="unsigned long" ;;
